git-annex (0.20110316) UNRELEASED; urgency=low

  * TODO: upgrade v1 -> v2
  * Reorganized annexed object store. annex.version=2
  * Colons are now avoided in filenames, so bare clones of git repos
    can be put on USB thumb drives formatted with vFAT or similar
    filesystems.
  * Added two levels of hashing to object directory and .git-annex logs,
    to improve scalability with enormous numbers of annexed
    objects. (With one hundred million annexed objects, each
    directory would contain fewer than 1024 files.)
  * The setkey, fromkey, and dropkey subcommands have changed how
    the key is specified. --backend is no longer used with these.
  * Add Suggests on graphviz. Closes: #618039
  * When adding files to the annex, the symlinks pointing at the annexed
    content are made to have the same mtime as the original file.
    While git does not preserve that information, this allows a tool
    like metastore to be used with annexed files.

 -- Joey Hess <joeyh@debian.org>  Sun, 13 Mar 2011 14:25:17 -0400

git-annex (0.23) unstable; urgency=low

  * Support ssh remotes with a port specified.
  * whereis: New subcommand to show where a file's content has gotten to.
  * Rethink filename encoding handling for display. Since filename encoding
    may or may not match locale settings, any attempt to decode filenames 
    will fail for some files. So instead, do all output in binary mode.

 -- Joey Hess <joeyh@debian.org>  Sat, 12 Mar 2011 15:02:49 -0400

git-annex (0.22) unstable; urgency=low

  * Git annexes can now be attached to bare git repositories.
    (Both the local and remote host must have this version of git-annex
    installed for it to work.)
  * Support filenames that start with a dash; when such a file is passed
    to a utility it will be escaped to avoid it being interpreted as an
    option. (I went a little overboard and got the type checker involved
    in this, so such files are rather comprehensively supported now.)